docs: add english comments to index.html
Included technical comments in English within the index.html file to follow software engineering best practices. This update improves code readability for international documentation standards.

--- a/index.html
+++ b/index.html
@@ -2,26 +2,28 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Busca de Funcionários - Janeiro 2026</title>
+    <title>Employee Search - January 2026</title>
+    
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h2>Fechamento da Folha - Janeiro 2026</h2>
+        <h2>Payroll Closing - January 2026</h2>
         
-        <input type="text" id="inputBusca" placeholder="🔍 Digite o nome do funcionário..." onkeyup="filtrarFuncionarios()">
+        <input type="text" id="inputBusca" placeholder="🔍 Type employee name..." onkeyup="filtrarFuncionarios()">
 
         <table id="tabelaFuncionarios">
             <thead>
                 <tr>
-                    <th>Nome</th>
-                    <th>Dias/Observação</th>
+                    <th>Name</th>
+                    <th>Days/Observation</th>
                 </tr>
             </thead>
             <tbody id="corpoTabela">
-                </tbody>
+            </tbody>
         </table>
     </div>
+
     <script src="./Index.js"></script>
 </body>
 </html>
